Update Image and Register

--- a/frontend/Detail.html
+++ b/frontend/Detail.html
@@ -36,9 +36,7 @@
 
     <div class="product-detail">
   <!-- Hình xe -->
-        <div class="thumbnail">
-            <img id="mainImage" src="picture/waveA.png" alt="product picture">
-        </div>
+        <div class="images"></div>
 
   <!-- Thông tin màu sắc -->
         <div class="color-section">
