--- a/frontend/Register.html
+++ b/frontend/Register.html
@@ -28,6 +28,11 @@
                     <input type="text" required>
                 </div>
 
+                <div class="input-section" id="Email">
+                    <p> Your email </p>
+                    <input type="text" required>
+                </div>
+
                 <div class="input-section" id="Username">
                     <P>User name</P>
                     <input type="text" placeholder="Username" required>
@@ -38,7 +43,7 @@
                     <input type="password" placeholder="Password" required>
                 </div>
 
-                <button type="button" onclick="CheckRegister()">Register</button>
+                <button type="button" id="register-button">Register</button>
             </div>
 
         </form>
